--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,28 @@
 .footer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     background: #fff;
     text-align: right;
     padding: 5px 40px;
     font-size: 0.9rem;
+}
+
+.footer span {
+    font-style: italic;
+    font-weight: bold;
+}
+
+.footer button {
+    width: 40px;
+    height: 40px;
+    background: unset;
+    margin-left: 20px;
+    border-radius: 50%;
+    border: none;
+    box-shadow: unset;
+    outline: 0;
+}
+.footer button:active {
+    transform: scale(0.95);
 }
