--- a/src/index.css
+++ b/src/index.css
@@ -181,13 +181,10 @@ button:active {
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.45);
   padding: 10px 20px;
   border-radius: 4px;
+  animation: blinker 2s linear infinite;
 }
-/* .instructions:before {
-    content:'';
-    display: inline-block;
-    width:0;
-    height:0;
-    border:20px solid transparent;
-    vertical-align: middle;
-    border-color: #CBCBCB;
-} */
+@keyframes blinker {
+  0% { opacity: 1.0; }
+  50% { opacity: 0.3; }
+  100% { opacity: 1.0; }
+}
